--- a/templates/index.html
+++ b/templates/index.html
@@ -79,7 +79,7 @@
       <div class="card">
         <div class="card-body">
           
-          This is some text within a card body.
+          This is some text within a card body.123
           <div class="card" style="width: 18rem;">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
