--- a/templates/index1.html
+++ b/templates/index1.html
@@ -95,15 +95,21 @@
       <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-              <img src="{{url_for('static',filename='twice/twice1.png')}}" class="d-block w-100" alt="...">
+              <img src="{{url_for('static',filename='鬼滅/1.jpg')}}" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="{{url_for('static',filename='twice/twice2.png')}}" class="d-block w-100" alt="...">
+            <img src="{{url_for('static',filename='鬼滅/2.jpeg')}}" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="{{url_for('static',filename='twice/twice3.jpg')}}" class="d-block w-100" alt="...">
-            
+            <img src="{{url_for('static',filename='鬼滅/3.jpg')}}" class="d-block w-100" alt="...">
           </div>
+          <div class="carousel-item active">
+            <img src="{{url_for('static',filename='鬼滅/4.jpg')}}" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="{{url_for('static',filename='鬼滅/5.jpeg')}}" class="d-block w-100" alt="...">
+        </div>
+      
         </div>
       </div>
     </main>
