--- a/templates/product.html
+++ b/templates/product.html
@@ -31,6 +31,8 @@
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="/picture">照片</a>
                     <a class="dropdown-item" href="/product">作品</a>
+                    <a class="dropdown-item" href="/Calendar">行事曆</a>
+                    <a class="dropdown-item" href="/rcp">柴犬</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="https://getbootstrap.com/" target="_blank">bootstrap</a>
                     <a class="dropdown-item" href="https://www.tiny.cloud/docs/demo/full-featured/"target="_blank">網頁工具</a>
