--- a/templates/index.html
+++ b/templates/index.html
@@ -46,48 +46,7 @@
 </head>
 <body>
     <header>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <a class="navbar-brand" href="#"><img src="{{url_for('static',filename='www.png')}}" width=160 hight=60 alt="kiki website"></a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
-                    </button>
-                  
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                      <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                          <a class="nav-link" href="/">Home <span class="sr-only"></span></a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="/about">關於偶</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            一些專案
-                          </a>
-                          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="/picture">照片</a>
-                            <a class="dropdown-item" href="/product">作品</a>
-                            <a class="dropdown-item" href="/Calendar">行事曆</a>
-                            <a class="dropdown-item" href="/rcp">柴犬</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="https://getbootstrap.com/" target="_blank">bootstrap</a>
-                            <a class="dropdown-item" href="https://www.tiny.cloud/docs/demo/full-featured/"target="_blank">網頁工具</a>
-                          
-                        </div>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="https://github.com/jacchkiki">github</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">部落格</a>
-                        </li>
-                      </ul>
-                      <form class="form-inline my-2 my-lg-0">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                      </form>
-                    </div>
-                  </nav> 
+      {% include 'include.html' %}
 
     </header>
 
