--- a/templates/master/index1.html
+++ b/templates/master/index1.html
@@ -58,7 +58,7 @@
     <div class="container d-flex justify-content-between">
       <a href="#" class="navbar-brand d-flex align-items-center">
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="mr-2" viewBox="0 0 24 24" focusable="false"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"/><circle cx="12" cy="13" r="4"/></svg>
-        <strong>Album</strong>
+        <strong>口袋怪獸圖鑑</strong>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -71,8 +71,8 @@
 
   <section class="jumbotron text-center">
     <div class="container">
-      <h1>{{master["B1"].value}} ({{master["B2"].value}}) ({{master["c1"].value}})</h1>
-      <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
+      <h1>{{master["B1"].value}} {{master["C1"].value}} {{master["D1"].value}}</h1>
+      <p class="lead text-muted">三隻小可愛</p>
       <p>
         <a href="#" class="btn btn-primary my-2">Main call to action</a>
         <a href="#" class="btn btn-secondary my-2">Secondary action</a>
@@ -86,9 +86,9 @@
       <div class="row">
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm">
-            <img src="{{url_for('static',filename='candy/17.jpeg')}}" width="100%" height="225" alt="...">
+            <img src="{{url_for('static',filename='皮卡丘/'+(master['B3'].value))}}" width="100%" height="225" alt="...">
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">{{master["B3"].value}}</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -101,10 +101,9 @@
         </div>
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm">
-            
-            <img src="{{url_for('static',filename='candy/15.jpg')}}" width="100%" height="225" alt="...">
+           <img src="{{url_for('static',filename='皮卡丘/'+(master['B4'].value))}}" width="100%" height="225" alt="...">
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">{{master["B4"].value}}</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -117,9 +116,9 @@
         </div>
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm">
-            <img src="{{url_for('static',filename='candy/16.jpg')}}" width="100%" height="225" alt="...">
+            <img src="{{url_for('static',filename='皮卡丘/'+(master['B5'].value))}}" width="100%" height="225" alt="...">
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">{{master["B5"].value}}</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -133,9 +132,9 @@
 
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm">
-            <img src="{{url_for('static',filename='candy/17.jpeg')}}" width="100%" height="225" alt="...">
+            <img src="{{url_for('static',filename='皮卡丘/'+(master['D4'].value))}}" width="100%" height="225" alt="...">
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">{{master["B6"].value}}</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
