--- a/templates/include.html
+++ b/templates/include.html
@@ -23,6 +23,7 @@
             <a class="dropdown-item" href="/rcp">柴犬</a>
             <a class="dropdown-item" href="/2">鬼滅豬認</a>
             <a class="dropdown-item" href="/3">猴跳牆</a>
+            <a class="dropdown-item" href="/master?name=皮卡丘">皮卡丘</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="https://getbootstrap.com/" target="_blank">bootstrap</a>
             <a class="dropdown-item" href="https://www.tiny.cloud/docs/demo/full-featured/"target="_blank">網頁工具</a>
