--- a/templates/master/index1.html
+++ b/templates/master/index1.html
@@ -44,11 +44,12 @@
           <p class="text-muted">Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites or contact information.</p>
         </div>
         <div class="col-sm-4 offset-md-1 py-4">
-          <h4 class="text-white">Contact</h4>
-          <ul class="list-unstyled">
-            <li><a href="#" class="text-white">Follow on Twitter</a></li>
-            <li><a href="#" class="text-white">Like on Facebook</a></li>
-            <li><a href="#" class="text-white">Email me</a></li>
+          <h4 class="text-white">神奇寶貝</h4>
+          <ul class="list-unstyled"> 
+            {% for sheets in sheetnames %}
+            <li><a href="/master?name={{sheets}}" class="text-white">{{sheets}}</a></li>
+            {% endfor %}
+
           </ul>
         </div>
       </div>
