--- a/templates/master/index1.html
+++ b/templates/master/index1.html
@@ -90,6 +90,26 @@
             <img src="{{url_for('static',filename=a+'/'+(master['B3'].value))}}" width="100%" height="225" alt="...">
             <div class="card-body">
               <p class="card-text">{{master["B3"].value}}</p>
+                <br>
+                {{master["A7"].value}}
+                </b>
+                <br>
+                {{master["B7"].value}}
+                </b>
+                <br>
+                {{master["A8"].value}}
+                </b>
+                <br>
+                {{master["B8"].value}}
+                
+                </b>
+                <br>
+                {{master["A9"].value}}
+                </b>
+                <br>
+                {{master["B9"].value}}
+                </b>
+              
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -105,6 +125,25 @@
            <img src="{{url_for('static',filename=a+'/'+(master['B4'].value))}}" width="100%" height="225" alt="...">
             <div class="card-body">
               <p class="card-text">{{master["B4"].value}}</p>
+                  <br>
+                  {{master["A7"].value}}
+                  </b>
+                  <br>
+                  {{master["C7"].value}}
+                  </b>
+                  <br>
+                  {{master["A8"].value}}
+                  </b>
+                  <br>
+                  {{master["C8"].value}}
+                  
+                  </b>
+                  <br>
+                  {{master["A9"].value}}
+                  </b>
+                  <br>
+                  {{master["C9"].value}}
+                  </b>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -120,6 +159,25 @@
             <img src="{{url_for('static',filename=a+'/'+(master['B5'].value))}}" width="100%" height="225" alt="...">
             <div class="card-body">
               <p class="card-text">{{master["B5"].value}}</p>
+                  <br>
+                  {{master["A7"].value}}
+                  </b>
+                  <br>
+                  {{master["D7"].value}}
+                  </b>
+                  <br>
+                  {{master["A8"].value}}
+                  </b>
+                  <br>
+                  {{master["D8"].value}}
+                  
+                  </b>
+                  <br>
+                  {{master["A9"].value}}
+                  </b>
+                  <br>
+                  {{master["D9"].value}}
+                  </b>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
