--- a/templates/master/index1.html
+++ b/templates/master/index1.html
@@ -40,8 +40,9 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-8 col-md-7 py-4">
-          <h4 class="text-white">About</h4>
-          <p class="text-muted">Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites or contact information.</p>
+  
+          <a class="nav-link" href="/">About  <span class="sr-only"></span></a>
+        </li>
         </div>
         <div class="col-sm-4 offset-md-1 py-4">
           <h4 class="text-white">神奇寶貝</h4>
