--- a/templates/index.html
+++ b/templates/index.html
@@ -24,10 +24,11 @@
          $(".go").html($(this).html())
        });
        
-      });
+    });
 
     </script>
     <script>
+        
         //讀取文件
         $( document ).ready(function() { 
             //如果文件點選項目時
@@ -37,14 +38,23 @@
                 $(".result").html($(this).html());
 
             });
-
         });
+
     </script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <style>
+      p {color:darkslategrey;}
+      .score {font-size: large;}
+      .b {font-size: small;}
+    </style>
+  
+
     <title>kiki's website</title>
 
 </head>
-<body>
+<body> 
+  <p class="score">.1.2.3.4.5</p>
+  <p class="b">.6.7.8.9.10</p>
     <header>
       {% include 'include.html' %}
 
