--- a/templates/index.html
+++ b/templates/index.html
@@ -44,6 +44,7 @@
       p {color:darkslategrey;}
       .score {font-size: large;}
       .b {font-size: small;}
+      .div3 {height: 80vh;}
       section {height: 80vh;}
     </style>
 
@@ -109,6 +110,85 @@
     </div> 
     </section>
     <!-- START THE FEATURETTES -->
+
+    <section>
+      <div class="container-lg marketing">
+
+       
+      <div class="div3">
+        
+          123
+          </div>
+          
+        </div>
+    </section>
+
+
+    <section>
+        <div class="container-lg marketing">
+  
+            <div class="container bg-info">
+                <div class="row">
+                  <div class="col-sm">
+                    One of three columns
+                  </div>
+                  <div class="col-sm">
+                    One of three columns
+                  </div>
+                  <div class="col-sm">
+                    One of three columns
+                  </div>
+
+                  <div class="col-sm">
+                      One of three columns
+                    </div>
+                </div>
+              </div>
+              <div class="container px-lg-5">
+                  <div class="row mx-lg-n5">
+                    <div class="col py-3 px-lg-5 border bg-light">Custom column padding</div>
+                    <div class="col py-3 px-lg-5 border bg-light">Custom column padding</div>
+                  </div>
+                </div>
+              
+              <div class="container">
+                <div class="row">
+                  <div class="col">1</div>
+                  <div class="col">2</div>
+                  <div class="col">3</div>
+                </div>
+                <div class="row">
+                  <div class="col">1</div>
+                  <div class="col">1</div>
+                  <div class="col">1</div>
+                </div>
+                <div class="row bg-info">
+                  <div class="col">1</div>
+                  <div class="col">1</div>
+                  <div class="col">1</div>
+                  <div class="col">1</div>
+                  <div class="col">1</div>
+                  <div class="col">1</div>
+                  <div class="col">1</div>
+                  <div class="col">1</div>
+                  <div class="col">1</div>
+                  <div class="col">1</div>
+                  <div class="col">1</div>
+                  <div class="col">1</div>
+                </div>
+                <div class="row bg-light div3">
+                  <div class="col-8">1</div>
+                  <div class="col-1">2</div>
+                  <div class="col-3">3</div>
+                </div>
+              </div>
+
+        <div class="div3">
+          
+        </div> 
+          </div>
+      </section>
+
     </main>
 
     <footer>
